--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/vite": "^4.0.3",
+    "@vercel/analytics": "^1.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
